--- a/html/Practice/practice_webpage_1/practice_webpage_1.css
+++ b/html/Practice/practice_webpage_1/practice_webpage_1.css
@@ -1,9 +1,7 @@
-body
-{
+body{
           background-color: rgb(207, 144, 8);
 }
-h1
-{
+h1{
           font-size: 50px;
           font-family: 'Courier New', Courier, monospace;
           text-align: center;
@@ -12,11 +10,30 @@ h1
           color: white;
           border: solid white 10px;
 }
-p
-{
+p{
           color: rgb(57, 245, 182);
 }
-address
-{
+address{
           color: rgb(77,0,0);
+}
+#menu{
+          padding: 0px;
+          margin: 0px;
+          list-style-type: none;
+          background-color: rgba(0, 0, 0,0.8);
+          overflow: hidden;
+}
+#menu li{
+          float: left;
+}
+#menu li a{
+          color: white;
+          text-decoration: none;
+          display: block;
+          text-align: center;
+          font-size: 20px;
+          padding: 13px;
+}
+#menu li a:hover{
+          background-color: rgba(0, 0, 0,1);
 }
