--- a/html/Practice/practice_webpage_1/Practice_webpage_1_Home.css
+++ b/html/Practice/practice_webpage_1/Practice_webpage_1_Home.css
@@ -1,20 +1,24 @@
 body{
-          background-color: rgb(207, 144, 8);
+          background-color: rgb(21, 22, 44);
 }
 h1{
-          font-size: 50px;
-          font-family: 'Courier New', Courier, monospace;
+          position: relative;
+          margin: 0px;
+          font-size: 35px;
           text-align: center;
           padding: 10px 20px 10px 20px;
-          background-color: rgb(77, 0, 0);
+          background-color: rgb(0, 0, 0);
           color: white;
-          border: solid white 10px;
 }
 p{
-          color: rgb(57, 245, 182);
+          color: rgb(255, 255, 255);
 }
 address{
-          color: rgb(77,0,0);
+          color: rgb(255, 255, 255);
+}
+img{
+          margin: 20px 10px;
+          width:200px;
 }
 #menu{
           padding: 0px;
@@ -35,5 +39,5 @@ address{
           padding: 13px;
 }
 #menu li a:hover{
-          background-color: rgba(0, 0, 0,1);
+          background-color: rgb(68, 68, 68);
 }
