--- a/html/Practice/practice_webpage_1/Practice_webpage_1_Home.css
+++ b/html/Practice/practice_webpage_1/Practice_webpage_1_Home.css
@@ -1,7 +1,9 @@
 body{
           background-color: rgb(21, 22, 44);
+          margin: 0px;
 }
-h1{
+.website_title{
+          user-select: none;
           position: relative;
           margin: 0px;
           font-size: 35px;
@@ -10,15 +12,8 @@ h1{
           background-color: rgb(0, 0, 0);
           color: white;
 }
-p{
-          color: rgb(255, 255, 255);
-}
 address{
           color: rgb(255, 255, 255);
-}
-img{
-          margin: 20px 10px;
-          width:200px;
 }
 #menu{
           padding: 0px;
@@ -31,6 +26,7 @@ img{
           float: left;
 }
 #menu li a{
+          user-select: none;
           color: white;
           text-decoration: none;
           display: block;
@@ -41,3 +37,55 @@ img{
 #menu li a:hover{
           background-color: rgb(68, 68, 68);
 }
+.img_bank{
+          user-select: none;
+          display: inline-block;
+          width:10%;
+          margin: 10px 10px;
+          position: relative;
+}
+.img_bank div{
+          user-select: none;
+          position: absolute;
+          background-color: rgba(255, 255, 255,0.5);
+          display: none;
+          font-size: 100%;
+          font-family:cursive;
+}
+.img_bank img{
+          width: 100%;
+          height: auto;
+          opacity: 1;
+}
+
+.bottom_tab{
+          padding: 20px;
+          position: absolute;
+          bottom: 0px;
+          left: 0;
+          right: 0;
+          overflow: hidden;
+          background-color: black;
+}
+.bottom_tab p{
+          float: left;
+          margin: 0%;
+          padding: 1px 1%;
+          color: white;
+}
+.bottom_tab address{
+          clear: both;
+          float: left;
+          margin: 0%;
+          padding: 1px 1%;
+          color: white;
+}
+.bottom_tab a:link{
+          text-decoration: none;
+          color: rgb(46,43,226);
+}
+.bottom_tab a:visited{
+          text-decoration: none;
+          color: rgb(46, 43, 226);
+}
+
