--- a/Practice_webpage_1_Home.css
+++ b/Practice_webpage_1_Home.css
@@ -1,12 +1,16 @@
+*{
+          font-family: cursive;
+}
 body{
-          background-color: rgb(21, 22, 44);
+          background-color: rgb(10, 10, 10);
           margin: 0px;
 }
 .website_title{
           user-select: none;
           position: relative;
           margin: 0px;
-          font-size: 35px;
+          font-size: 150%;
+          font-size: 4vw;
           text-align: center;
           padding: 10px 20px 10px 20px;
           background-color: rgb(0, 0, 0);
@@ -26,23 +30,27 @@ address{
           float: left;
 }
 #menu li a{
+          font-size: 4vw;
           user-select: none;
           color: white;
           text-decoration: none;
           display: block;
           text-align: center;
-          font-size: 20px;
           padding: 13px;
 }
 #menu li a:hover{
           background-color: rgb(68, 68, 68);
 }
 .img_bank{
+          vertical-align: top;
           user-select: none;
-          display: inline-block;
-          width:10%;
-          margin: 10px 10px;
-          position: relative;
+          display: inline-flex;
+          clear: both;
+          width:18%;
+          margin: 1% .05%;
+          padding: 5px;
+          background-color: black;
+          border-radius: 15px;
 }
 .img_bank div{
           user-select: none;
@@ -50,12 +58,12 @@ address{
           background-color: rgba(255, 255, 255,0.5);
           display: none;
           font-size: 100%;
-          font-family:cursive;
+          border-radius: 10px;
 }
 .img_bank img{
           width: 100%;
           height: auto;
-          opacity: 1;
+          border-radius: 10px;
 }
 
 .bottom_tab{
@@ -68,12 +76,14 @@ address{
           background-color: black;
 }
 .bottom_tab p{
+          font-size: 4vw;
           float: left;
           margin: 0%;
           padding: 1px 1%;
           color: white;
 }
 .bottom_tab address{
+          font-size: 4vw;
           clear: both;
           float: left;
           margin: 0%;
