--- a/Practice_webpage_1_Home.css
+++ b/Practice_webpage_1_Home.css
@@ -1,101 +1,130 @@
 *{
           font-family: cursive;
+          box-sizing: border-box;
 }
 body{
-          background-color: rgb(10, 10, 10);
           margin: 0px;
+          min-width: 390px;
 }
-.website_title{
-          user-select: none;
-          position: relative;
-          margin: 0px;
-          font-size: 150%;
-          font-size: 4vw;
+#title{
+          margin: 20px;
           text-align: center;
-          padding: 10px 20px 10px 20px;
-          background-color: rgb(0, 0, 0);
-          color: white;
 }
-address{
-          color: rgb(255, 255, 255);
-}
-#menu{
-          padding: 0px;
+#navbar{
           margin: 0px;
-          list-style-type: none;
-          background-color: rgba(0, 0, 0,0.8);
-          overflow: hidden;
+          position: sticky;
+          top: 0px;
+          background-color: black;
 }
-#menu li{
-          float: left;
-}
-#menu li a{
-          font-size: 4vw;
+#navbar a{
           user-select: none;
+          display: inline-block;
           color: white;
-          text-decoration: none;
-          display: block;
+          margin: 0px;
+          padding: 20px;
+          width: 110px;
           text-align: center;
-          padding: 13px;
 }
-#menu li a:hover{
-          background-color: rgb(68, 68, 68);
+#navbar a:hover{
+          background-color: rgb(190,190,190);
+}
+#navbar .active{
+          background-color: rgb(190,190,190);
+}
+#date_table{
+          background-color: black;
+          padding: 10px;
+          border-radius: 15px;
+          margin: 10px 20%;
+}
+#date_table p{
+          margin-top: 15px;
+          color: white;
+          display: inline-block;
+}
+#date_table div{
+          display: inline-block;
+}
+#date_table div a{
+          color: white;
+          margin-left: 10px;
+
 }
 .img_bank{
-          vertical-align: top;
-          user-select: none;
-          display: inline-flex;
-          clear: both;
-          width:18%;
-          margin: 1% .05%;
-          padding: 5px;
-          background-color: black;
-          border-radius: 15px;
+          margin-left: 12%;
+          width: 83%;
+          margin-top: 50px;
 }
-.img_bank div{
-          user-select: none;
-          position: absolute;
-          background-color: rgba(255, 255, 255,0.5);
-          display: none;
-          font-size: 100%;
-          border-radius: 10px;
-}
-.img_bank img{
-          width: 100%;
-          height: auto;
-          border-radius: 10px;
-}
-
-.bottom_tab{
-          padding: 20px;
-          position: absolute;
-          bottom: 0px;
-          left: 0;
-          right: 0;
+.img_container{
+          margin: 0px 10px 0px 0px;
           overflow: hidden;
+          padding: 0px;
+          display: inline-block;
+}
+.img_container img{
+          border-radius: 5px;
+          margin: 0px;
+          width: 200px;
+}
+.img_container div{
+          align-self: top;
+          border-radius: 5px;
+          position: relative;
+          bottom:70px;
+          display:block;
+          visibility:hidden;
+          color: white;
           background-color: black;
+          margin:0px;
+          width: 200px;
+          font-size: 30px;
 }
-.bottom_tab p{
-          font-size: 4vw;
+.img_container div p{
+          margin: 0px;
+}
+.img_container div .description{
+          font-size: 13px;
+          min-height: 30px;
+}
+.date_bar{
+          position: sticky;
+          overflow: hidden;
+          top:60px;
+          background-color: rgb(190,190,190);
+          margin: 0px;
+          text-align: center;
+}
+#footer{
+          overflow: hidden;
           float: left;
-          margin: 0%;
-          padding: 1px 1%;
+          background-color: black;
+          margin: 0px;
+          width: 100%;
+}
+#language_select{
+          margin-right:10px;
           color: white;
+          float: right;
 }
-.bottom_tab address{
-          font-size: 4vw;
-          clear: both;
-          float: left;
-          margin: 0%;
-          padding: 1px 1%;
+#language_select a{
+          user-select: none;
+          color: aqua;
+          text-decoration: none;
+}
+#language_select .active{
           color: white;
-}
-.bottom_tab a:link{
-          text-decoration: none;
-          color: rgb(46,43,226);
-}
-.bottom_tab a:visited{
-          text-decoration: none;
-          color: rgb(46, 43, 226);
+          text-decoration: underline;
 }
 
+@media only screen and (max-width:450px){
+          .img_bank{
+                    margin-left: 0px;
+                    width: 380px;
+          }
+}
+@media only screen and (max-width:850px){
+          .img_bank{
+                    margin-left: 100px;
+                    width:80%;
+          }
+}
